<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pick_a_server">Pick your Jabber service</string>
    <string name="use_conversations.im">Use ChatterboxTown</string>
    <string name="get_jabber_id">Get Jabber ID</string>
    <string name="create_new_account">I need to sign up</string>
    <string name="i_already_have_an_account">I already have a Jabber ID</string>
    <string name="i_am_snikket_user">I am a Snikket user</string>
    <string name="do_you_have_an_account">Do you already have a Jabber ID? This might be the case if you are already using a different Jabber client or have used Cheogram Android, Conversations, or Snikket before. If not you can create a new Jabber ID right now.</string>
    <string name="server_select_text">Jabber is a provider independent instant messaging network, powered by the XMPP protocol. You can use this client with whatever Jabber service you choose.</string>
    <string name="magic_create_text">You will be able to communicate with users of other providers by giving them your full Jabber ID.</string>
    <string name="magic_create_text_on_x">You have been invited to %1$s. We will guide you through the process of creating an account.\nWhen picking %1$s as a provider you will be able to communicate with users of other providers by giving them your full Jabber ID.</string>
    <string name="magic_create_text_fixed">You have been invited to %1$s. A username has already been picked for you. We will guide you through the process of creating an account.\nYou will be able to communicate with users of other providers by giving them your full Jabber ID.</string>
    <string name="your_server_invitation">Your server invitation</string>
    <string name="improperly_formatted_provisioning">Improperly formatted provisioning code</string>
    <string name="tap_share_button_send_invite">Tap the share button to send your contact an invitation to %1$s.</string>
    <string name="if_contact_is_nearby_use_qr">If your contact is nearby, they can also scan the code below to accept your invitation.</string>
    <string name="easy_invite_share_text">Join %1$s and chat with me: %2$s</string>
    <string name="share_invite_with">Share invite with…</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next">Next</string>
    <string name="action_prev">Back</string>
    <string name="action_complete">Finish</string>
    <string name="action_close">Close</string>
    <string name="action_execute">Go</string>
    <string name="pref_theme_oledblack">OLED Black</string>
    <string name="pref_theme_custom">Custom</string>
    <string name="invite_to_app">Invite to Chat</string>
    <string name="only_this_thread">Show only this thread</string>
    <string name="pref_dialler_integration_incoming">Use Phone Accounts for Incoming Calls</string>
    <string name="pref_dialler_integration_incoming_summary">Incoming calls from phone numbers may ring with your system dialler instead of this app\'s notification settings</string>
    <string name="save_as_sticker">Save as Sticker</string>
    <string name="sticker_name">Sticker Name</string>
    <string name="moderate_message">Moderate</string>
    <string name="moderate_reason">Moderation Reason</string>
    <string name="unable_to_moderate">Unable to Moderate</string>
    <string name="block_media">Block Media</string>
    <string name="new_contact">New Contact or Channel</string>
    <string name="mgmt_account_import_sms">Import SMS messages</string>
    <string name="sms_import_header">Import SMS/MMS Messages</string>
    <string name="sms_import_messages_completed">Imported: </string>
    <string name="sms_import_messages_skipped">Skipped: </string>
    <string name="sms_import_messages_errors">Errors: </string>
    <string name="sms_import_title">SMS import complete</string>
    <string name="sms_import_report">Imported: %1$d, Skipped: %2$d, Errors: %3$d</string>
    <string name="sms_import_start_import">Start Import</string>
    <string name="sms_import_already_running">Import already running</string>
    <string name="sms_no_permission">Import canceled.  Insufficient permission</string>
    <string name="sms_phone_number_hint">Phone number</string>
    <string name="sms_phone_number_label">MMS -> Group Chat Filter</string>
    <string name="sms_import_done">Import Done.</string>
</resources>
