<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:textAlignment="textEnd">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="411dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sms_phone_number_label"
        app:layout_constraintEnd_toStartOf="@+id/phoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/phoneNumber"
        style="@style/Widget.Conversations.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="48dp"
        android:autofillHints=""
        android:hint="@string/sms_phone_number_hint"
        android:inputType="phone"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@id/phone_number_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/phone_number_label"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/imported_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sms_import_messages_completed"
        app:layout_constraintBottom_toTopOf="@id/skipped_label"
        app:layout_constraintEnd_toStartOf="@+id/imported_count"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/imported_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@id/imported_label"
        app:layout_constraintEnd_toStartOf="@+id/imported_fill"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/imported_label" />

    <TextView
        android:id="@+id/imported_fill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintBaseline_toBaselineOf="@id/imported_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toEndOf="@+id/imported_count" />

    <TextView
        android:id="@+id/skipped_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sms_import_messages_skipped"
        app:layout_constraintBottom_toTopOf="@id/errors_label"
        app:layout_constraintEnd_toStartOf="@+id/skipped_count"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/skipped_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@id/skipped_label"
        app:layout_constraintEnd_toStartOf="@+id/skipped_fill"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/skipped_label" />

    <TextView
        android:id="@+id/skipped_fill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintBaseline_toBaselineOf="@id/skipped_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toEndOf="@+id/skipped_count" />

    <TextView
        android:id="@+id/errors_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sms_import_messages_errors"
        app:layout_constraintBottom_toTopOf="@id/progress_bar"
        app:layout_constraintEnd_toStartOf="@+id/errors_count"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/errors_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@id/errors_label"
        app:layout_constraintEnd_toStartOf="@+id/errors_fill"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/errors_label" />

    <TextView
        android:id="@+id/errors_fill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintBaseline_toBaselineOf="@id/errors_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toEndOf="@+id/errors_count" />


    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@id/done_notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/done_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_import_done"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintEnd_toEndOf="@+id/progress_bar"
        app:layout_constraintStart_toStartOf="@+id/progress_bar"
        tools:layout_constraintBottom_toTopOf="@id/start_button"
        tools:visibility="visible" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_import_start_import"
        app:layout_constraintBottom_toBottomOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
